# dcmtk_example_rt

./: CMakeLists.txt  beam.h  contour.cpp  contour.h  controlpoint.h  main.cc  plan.cpp  plan.h
data/: rtdose.dcm  rtplan.dcm  rtstruct.dcm
